# cloud-run-demo

./: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
service/: main.py
