[tool.poetry]
name = "cloud-run-demo"
version = "0.1.0"
description = ""
authors = ["Yvan Aquino <yaquino@google.com>"]
readme = "README.md"
packages = [{include = "service"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
requests = "^2.28.0"
flake8 = "^4.0.1"
yapf = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
